outputting the V time series that's needed for calculating the standard deviation by bootstrpaping the years

--- a/DATASORT/VWIND/outputMMLEA.ipynb
+++ b/DATASORT/VWIND/outputMMLEA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,8 @@
     "            print(\"something's wrong, \"+str(nmonthsfut)+\n",
     "                 \"expected, but got \"+str(vfut.time.size))\n",
     "            sys.exit(\"failure at \"+fname+\" future period\")\n",
-    "            \n",
+    "\n",
+    "        vpastdjf_ts = cal.season_ts(vpast,\"va\", season=\"DJF\")\n",
     "        vpastdjf=cal.season_mean(vpast, \"va\", season=\"DJF\")\n",
     "        vfutdjf=cal.season_mean(vfut, \"va\", season=\"DJF\")\n",
     "        \n",
@@ -361,6 +362,7 @@
     "        reusewgt=True\n",
     "        vpastinterp = regridder(vpastdjf)\n",
     "        vfutinterp = regridder(vfutdjf)\n",
+    "        vpastdjf_tsinterp=regridder(vpastdjf_ts)\n",
     "        \n",
     "        if (imem == 0):\n",
     "            vpast_djf = xr.DataArray(np.zeros([nmems, nlat, nlon]),\n",
@@ -369,12 +371,17 @@
     "            vfut_djf = xr.DataArray(np.zeros([nmems, nlat, nlon]),\n",
     "                                    coords=[np.arange(0,nmems,1), vfutinterp[\"lat\"], vfutinterp[\"lon\"]],\n",
     "                                            dims=[\"member\", \"lat\", \"lon\"], name=\"vfut_djf\")\n",
+    "            vpast_djf_ts = xr.DataArray(np.zeros([nmems, vpastdjf_ts.time.size, nlat, nlon]),\n",
+    "                                        coords=[np.arange(0,nmems,1), vpastdjf_ts.time, vpastdjf_tsinterp[\"lat\"], vpastdjf_tsinterp[\"lon\"]],\n",
+    "                                        dims=[\"member\",\"time\",\"lat\",\"lon\"], name=\"vpast_djf_ts\")\n",
     "            \n",
     "        vpast_djf[imem,:,:]=vpastinterp\n",
     "        vfut_djf[imem,:,:]=vfutinterp\n",
+    "        vpast_djf_ts[imem,:,:,:]=vpastdjf_tsinterp\n",
     "        \n",
     "    vpast_djf.to_netcdf(path=pathout+\"v300_\"+modnames[imod]+\".nc\")\n",
     "    vfut_djf.to_netcdf(path=pathout+\"v300_\"+modnames[imod]+\".nc\", mode=\"a\")\n",
+    "    vpast_djf_ts.to_netcdf(path=pathout+\"v300timeseris_\"+modnames[imod]+\".nc\")\n",
     "        \n",
     "        "
    ]
