adding in output of V300 timeseries to outputreanalysis.ipynb

--- a/DATASORT/VWIND/outputreanalysis.ipynb
+++ b/DATASORT/VWIND/outputreanalysis.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,13 +74,15 @@
     "if (v.time.size != nmonths):\n",
     "    print(\"expected \"+str(nmonths)+\" months, got\"+str(v.time.size))\n",
     "    sys.exit()\n",
+    "vdjfts=cal.season_ts(v, \"va\", season=\"DJF\")\n",
     "vdjf=cal.season_mean(v, \"va\", season=\"DJF\")\n",
     "regridder = xe.Regridder(vdjf, grid_out, 'bilinear', periodic=True, reuse_weights=False, filename=wgtfile)\n",
     "vdjfinterp = regridder(vdjf)\n",
     "vk4to32 = filt.filterk(vdjfinterp, 4, 32)\n",
     "vamp_era5 = np.sqrt(avg.cosweightlonlat(vk4to32**2, 200., 300., 20., 40.))\n",
     "vamp_era5=xr.DataArray(vamp_era5, name='vamp_era5')\n",
-    "vamp_era5.to_netcdf(outpath+\"/vampobs.nc\")"
+    "vamp_era5.to_netcdf(outpath+\"/vampobs.nc\")\n",
+    "vdjfts.to_netcdf(outpath+\"/v300timeseries_ERA5.nc\")"
    ]
   },
   {
@@ -92,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,13 +103,15 @@
     "if (v.time.size != nmonths):\n",
     "    print(\"expected \"+str(nmonths)+\" months, got\"+str(v.time.size))\n",
     "    sys.exit()\n",
+    "vdjfts=cal.season_ts(v, \"va\", season=\"DJF\")\n",
     "vdjf=cal.season_mean(v, \"va\", season=\"DJF\")\n",
     "regridder = xe.Regridder(vdjf, grid_out, 'bilinear', periodic=True, reuse_weights=False, filename=wgtfile)\n",
     "vdjfinterp = regridder(vdjf)\n",
     "vk4to32 = filt.filterk(vdjfinterp, 4, 32)\n",
     "vamp_erai = np.sqrt(avg.cosweightlonlat(vk4to32**2, 200., 300., 20., 40.))\n",
     "vamp_erai=xr.DataArray(vamp_erai, name='vamp_erai')\n",
-    "vamp_erai.to_netcdf(outpath+\"/vampobs.nc\", mode=\"a\")"
+    "vamp_erai.to_netcdf(outpath+\"/vampobs.nc\", mode=\"a\")\n",
+    "vdjfts.to_netcdf(outpath+\"/v300timeseries_ERAI.nc\")"
    ]
   },
   {
@@ -128,13 +132,15 @@
     "if (v.time.size != nmonths):\n",
     "    print(\"expected \"+str(nmonths)+\" months, got\"+str(v.time.size))\n",
     "    sys.exit()\n",
+    "vdjfts=cal.season_ts(v, \"va\", season=\"DJF\")\n",
     "vdjf=cal.season_mean(v, \"va\", season=\"DJF\")\n",
     "regridder = xe.Regridder(vdjf, grid_out, 'bilinear', periodic=True, reuse_weights=False, filename=wgtfile)\n",
     "vdjfinterp = regridder(vdjf)\n",
     "vk4to32 = filt.filterk(vdjfinterp, 4, 32)\n",
     "vamp_jra = np.sqrt(avg.cosweightlonlat(vk4to32**2, 200., 300., 20., 40.))\n",
     "vamp_jra=xr.DataArray(vamp_jra, name='vamp_jra')\n",
-    "vamp_jra.to_netcdf(outpath+\"/vampobs.nc\", mode=\"a\")"
+    "vamp_jra.to_netcdf(outpath+\"/vampobs.nc\", mode=\"a\")\n",
+    "vdjfts.to_netcdf(outpath+\"/v300timeseries_JRA.nc\")"
    ]
   },
   {
@@ -167,13 +173,15 @@
     "if (v.time.size != nmonths):\n",
     "    print(\"expected \"+str(nmonths)+\" months, got\"+str(v.time.size))\n",
     "    sys.exit()\n",
+    "vdjfts = cal.season_ts(v, \"va\", season=\"DJF\")\n",
     "vdjf=cal.season_mean(v, \"va\", season=\"DJF\")\n",
     "regridder = xe.Regridder(vdjf, grid_out, 'bilinear', periodic=True, reuse_weights=False, filename=wgtfile)\n",
     "vdjfinterp = regridder(vdjf)\n",
     "vk4to32 = filt.filterk(vdjfinterp, 4, 32)\n",
     "vamp_merra = np.sqrt(avg.cosweightlonlat(vk4to32**2, 200., 300., 20., 40.))\n",
     "vamp_merra=xr.DataArray(vamp_merra, name='vamp_merra')\n",
-    "vamp_merra.to_netcdf(outpath+\"/vampobs.nc\", mode=\"a\")"
+    "vamp_merra.to_netcdf(outpath+\"/vampobs.nc\", mode=\"a\")\n",
+    "vdjfts.to_netcdf(outpath+\"/v300timeseries_\")"
    ]
   },
   {
