correcting outputreanalysis.ipynb to output the interpolated time series

--- a/DATASORT/VWIND/outputreanalysis.ipynb
+++ b/DATASORT/VWIND/outputreanalysis.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,10 +78,12 @@
     "vdjf=cal.season_mean(v, \"va\", season=\"DJF\")\n",
     "regridder = xe.Regridder(vdjf, grid_out, 'bilinear', periodic=True, reuse_weights=False, filename=wgtfile)\n",
     "vdjfinterp = regridder(vdjf)\n",
+    "vdjftsinterp = regridder(vdjfts)\n",
     "vk4to32 = filt.filterk(vdjfinterp, 4, 32)\n",
     "vamp_era5 = np.sqrt(avg.cosweightlonlat(vk4to32**2, 200., 300., 20., 40.))\n",
     "vamp_era5=xr.DataArray(vamp_era5, name='vamp_era5')\n",
     "vamp_era5.to_netcdf(outpath+\"/vampobs.nc\")\n",
+    "vdjfts = xr.DataArray(vdjftsinterp, name='vdjfts')\n",
     "vdjfts.to_netcdf(outpath+\"/v300timeseries_ERA5.nc\")"
    ]
   },
@@ -94,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,10 +109,12 @@
     "vdjf=cal.season_mean(v, \"va\", season=\"DJF\")\n",
     "regridder = xe.Regridder(vdjf, grid_out, 'bilinear', periodic=True, reuse_weights=False, filename=wgtfile)\n",
     "vdjfinterp = regridder(vdjf)\n",
+    "vdjftsinterp = regridder(vdjfts)\n",
     "vk4to32 = filt.filterk(vdjfinterp, 4, 32)\n",
     "vamp_erai = np.sqrt(avg.cosweightlonlat(vk4to32**2, 200., 300., 20., 40.))\n",
     "vamp_erai=xr.DataArray(vamp_erai, name='vamp_erai')\n",
     "vamp_erai.to_netcdf(outpath+\"/vampobs.nc\", mode=\"a\")\n",
+    "vdjfts = xr.DataArray(vdjftsinterp, name='vdjfts')\n",
     "vdjfts.to_netcdf(outpath+\"/v300timeseries_ERAI.nc\")"
    ]
   },
@@ -123,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,10 +140,12 @@
     "vdjf=cal.season_mean(v, \"va\", season=\"DJF\")\n",
     "regridder = xe.Regridder(vdjf, grid_out, 'bilinear', periodic=True, reuse_weights=False, filename=wgtfile)\n",
     "vdjfinterp = regridder(vdjf)\n",
+    "vdjftsinterp = regridder(vdjfts)\n",
     "vk4to32 = filt.filterk(vdjfinterp, 4, 32)\n",
     "vamp_jra = np.sqrt(avg.cosweightlonlat(vk4to32**2, 200., 300., 20., 40.))\n",
     "vamp_jra=xr.DataArray(vamp_jra, name='vamp_jra')\n",
     "vamp_jra.to_netcdf(outpath+\"/vampobs.nc\", mode=\"a\")\n",
+    "vdjfts = xr.DataArray(vdjftsinterp, name='vdjfts')\n",
     "vdjfts.to_netcdf(outpath+\"/v300timeseries_JRA.nc\")"
    ]
   },
@@ -152,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,11 +183,13 @@
     "vdjf=cal.season_mean(v, \"va\", season=\"DJF\")\n",
     "regridder = xe.Regridder(vdjf, grid_out, 'bilinear', periodic=True, reuse_weights=False, filename=wgtfile)\n",
     "vdjfinterp = regridder(vdjf)\n",
+    "vdjftsinterp = regridder(vdjfts)\n",
     "vk4to32 = filt.filterk(vdjfinterp, 4, 32)\n",
     "vamp_merra = np.sqrt(avg.cosweightlonlat(vk4to32**2, 200., 300., 20., 40.))\n",
     "vamp_merra=xr.DataArray(vamp_merra, name='vamp_merra')\n",
     "vamp_merra.to_netcdf(outpath+\"/vampobs.nc\", mode=\"a\")\n",
-    "vdjfts.to_netcdf(outpath+\"/v300timeseries_\")"
+    "vdjfts = xr.DataArray(vdjftsinterp, name='vdjfts')\n",
+    "vdjfts.to_netcdf(outpath+\"/v300timeseries_MERRA2.nc\")"
    ]
   },
   {
