modified the name of plotconstraintinfo in fig_utils.py toi plotconstraintinfo_shjet since we need an equivalent one for vwind, so changed the call to this in fig_5.ipynb

--- a/FIGURE_SCRIPTS/fig_5.ipynb
+++ b/FIGURE_SCRIPTS/fig_5.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -206,16 +206,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f28e1e43860>"
+       "<matplotlib.legend.Legend at 0x7f5a35d27b70>"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +317,7 @@
     "ax2.plot([-0.5,16.5],[min66, min66],color='firebrick', zorder=1, linewidth=3, linestyle='dotted')\n",
     "ax2.plot([-0.5,16.5],[max66, max66],color='firebrick', zorder=1, linewidth=3, linestyle='dotted')\n",
     "\n",
-    "shiftstring = '{0:6.2f}'.format(np.array(jlatdifs.mean())).strip()\n",
+    "jshiftstring = '{0:6.2f}'.format(np.array(jlatdifs.mean())).strip()\n",
     "ax2.text(1,-9.3, '$\\Delta \\phi$=', horizontalalignment='center', verticalalignment='center', fontsize=10, color='black')\n",
     "ax2.text(1, -9.8, jshiftstring, horizontalalignment='center', verticalalignment='center', fontsize=10, color='black')\n",
     "\n",
@@ -326,12 +326,12 @@
     "ax2.plot([2.5,2.5],[-9,3], color='black')\n",
     "\n",
     "# all the emergent constraints info\n",
-    "ax2 = ecfig.plotconstraintinfo(ax2, cmip5ols, cmip5tls, cmip5bhm)"
+    "ax2 = ecfig.plotconstraintinfo_shjet(ax2, cmip5ols, cmip5tls, cmip5bhm)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,12 +366,12 @@
     "ax3.plot([2.5,2.5],[-9,3], color='black')\n",
     "\n",
     "# all the emergent constraints info\n",
-    "ax3 = ecfig.plotconstraintinfo(ax3, cmip6ols, cmip6tls, cmip6bhm)"
+    "ax3 = ecfig.plotconstraintinfo_shjet(ax3, cmip6ols, cmip6tls, cmip6bhm)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,21 +410,21 @@
     "ax4.plot([2.5,2.5],[-9,3], color='black')\n",
     "\n",
     "# all the emergent constraints info\n",
-    "ax4 = ecfig.plotconstraintinfo(ax4, cmip56ols, cmip56tls, cmip56bhm)"
+    "ax4 = ecfig.plotconstraintinfo_shjet(ax4, cmip56ols, cmip56tls, cmip56bhm)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f28e1e85eb8>"
+       "<matplotlib.legend.Legend at 0x7f5a35c36c88>"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
