scrap the last thing

--- a/FIGURE_SCRIPTS/fig_5.ipynb
+++ b/FIGURE_SCRIPTS/fig_5.ipynb
@@ -326,7 +326,7 @@
     "ax2.plot([2.5,2.5],[-9,3], color='black')\n",
     "\n",
     "# all the emergent constraints info\n",
-    "ax2 = ecfig.plotconstraintinfo_shjet(ax2, cmip5ols, cmip5tls, cmip5bhm)"
+    "ax2 = ecfig.plotconstraintinfo(ax2, cmip5ols, cmip5tls, cmip5bhm)"
    ]
   },
   {
@@ -366,7 +366,7 @@
     "ax3.plot([2.5,2.5],[-9,3], color='black')\n",
     "\n",
     "# all the emergent constraints info\n",
-    "ax3 = ecfig.plotconstraintinfo_shjet(ax3, cmip6ols, cmip6tls, cmip6bhm)"
+    "ax3 = ecfig.plotconstraintinfo(ax3, cmip6ols, cmip6tls, cmip6bhm)"
    ]
   },
   {
@@ -410,7 +410,7 @@
     "ax4.plot([2.5,2.5],[-9,3], color='black')\n",
     "\n",
     "# all the emergent constraints info\n",
-    "ax4 = ecfig.plotconstraintinfo_shjet(ax4, cmip56ols, cmip56tls, cmip56bhm)"
+    "ax4 = ecfig.plotconstraintinfo(ax4, cmip56ols, cmip56tls, cmip56bhm)"
    ]
   },
   {
