changing fig_5.ipynb to feed y limits into plotconstraintinfo for automatic alignment of text

--- a/FIGURE_SCRIPTS/fig_5.ipynb
+++ b/FIGURE_SCRIPTS/fig_5.ipynb
@@ -294,10 +294,10 @@
    "source": [
     "#fig, axs = plt.subplots()\n",
     "#fig.set_size_inches(3.5,5)\n",
-    "\n",
+    "ylim=(-9,3)\n",
     "ax2 = fig.add_axes(np.array([0.43,0.1,0.23,0.8]))\n",
     "\n",
-    "ax2.set_ylim(-9,3)\n",
+    "ax2.set_ylim(ylim)\n",
     "ax2.set_xlim(-0.5,16.5)\n",
     "ax2.set_xticks([])\n",
     "ax2.set_yticks([-8,-6,-4,-2,0,2])\n",
@@ -326,7 +326,7 @@
     "ax2.plot([2.5,2.5],[-9,3], color='black')\n",
     "\n",
     "# all the emergent constraints info\n",
-    "ax2 = ecfig.plotconstraintinfo(ax2, cmip5ols, cmip5tls, cmip5bhm)"
+    "ax2 = ecfig.plotconstraintinfo(ax2, cmip5ols, cmip5tls, cmip5bhm, ylim)"
    ]
   },
   {
@@ -337,7 +337,7 @@
    "source": [
     "ax3 = fig.add_axes(np.array([0.69,0.1,0.23,0.8]))\n",
     "\n",
-    "ax3.set_ylim(-9,3)\n",
+    "ax3.set_ylim(ylim)\n",
     "ax3.set_xlim(-0.5,16.5)\n",
     "ax3.set_xticks([])\n",
     "ax3.set_yticks([-8,-6,-4,-2,0,2])\n",
@@ -366,7 +366,7 @@
     "ax3.plot([2.5,2.5],[-9,3], color='black')\n",
     "\n",
     "# all the emergent constraints info\n",
-    "ax3 = ecfig.plotconstraintinfo(ax3, cmip6ols, cmip6tls, cmip6bhm)"
+    "ax3 = ecfig.plotconstraintinfo(ax3, cmip6ols, cmip6tls, cmip6bhm, ylim)"
    ]
   },
   {
@@ -377,7 +377,7 @@
    "source": [
     "ax4 = fig.add_axes(np.array([0.95,0.1,0.23,0.8]))\n",
     "\n",
-    "ax4.set_ylim(-9,3)\n",
+    "ax4.set_ylim(ylim)\n",
     "ax4.set_xlim(-0.5,16.5)\n",
     "ax4.set_xticks([])\n",
     "ax4.set_yticks([-8,-6,-4,-2,0,2])\n",
@@ -410,7 +410,7 @@
     "ax4.plot([2.5,2.5],[-9,3], color='black')\n",
     "\n",
     "# all the emergent constraints info\n",
-    "ax4 = ecfig.plotconstraintinfo(ax4, cmip56ols, cmip56tls, cmip56bhm)"
+    "ax4 = ecfig.plotconstraintinfo(ax4, cmip56ols, cmip56tls, cmip56bhm, ylim)"
    ]
   },
   {
