modifying fig 10 to fix labelling

--- a/FIGURE_SCRIPTS/fig_10.ipynb
+++ b/FIGURE_SCRIPTS/fig_10.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,16 +193,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fefecf3f668>"
+       "<matplotlib.legend.Legend at 0x7f1a7b6474a8>"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -271,9 +271,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "89.12449070000001\n"
+     ]
+    }
+   ],
    "source": [
     "ylim=(-10,2)\n",
     "ax2 = fig.add_axes(np.array([0.43,0.1,0.23,0.8]))\n",
@@ -306,14 +314,22 @@
     "ax2.plot([2.5,2.5],[-10,2], color='black')\n",
     "\n",
     "# all the emergent constraint info\n",
-    "ax2 = ecfig.plotconstraintinfo(ax2, cmip5ols, cmip5tls, cmip5bhm, ylim)"
+    "ax2 = ecfig.plotconstraintinfo(ax2, cmip5ols, cmip5tls, cmip5bhm, ylim, \"$\\Delta V_{SW}$\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "74.85206193333333\n"
+     ]
+    }
+   ],
    "source": [
     "ylim=(-10,2)\n",
     "ax3 = fig.add_axes(np.array([0.69,0.1,0.23,0.8]))\n",
@@ -347,14 +363,22 @@
     "ax3.plot([2.5,2.5],[-10,2], color='black')\n",
     "\n",
     "# all the emergent constraint info\n",
-    "ax3 = ecfig.plotconstraintinfo(ax3, cmip6ols, cmip6tls, cmip6bhm, ylim)"
+    "ax3 = ecfig.plotconstraintinfo(ax3, cmip6ols, cmip6tls, cmip6bhm, ylim, \"$\\Delta V_{SW}$\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "85.36945123333334\n"
+     ]
+    }
+   ],
    "source": [
     "ax4 = fig.add_axes(np.array([0.95,0.1,0.23,0.8]))\n",
     "\n",
@@ -390,21 +414,21 @@
     "ax4.plot(np.zeros([cmip6.Model.size])+1.6,cmip6['vfutsw_em']-cmip6['vpastsw_em'],\"o\",markerfacecolor='royalblue',markeredgecolor='black',markersize=10,markeredgewidth=2)\n",
     "ax4.plot([2.5,2.5],ylim, color='black')\n",
     "\n",
-    "ax4 = ecfig.plotconstraintinfo(ax4, cmip56ols, cmip56tls, cmip56bhm, ylim)"
+    "ax4 = ecfig.plotconstraintinfo(ax4, cmip56ols, cmip56tls, cmip56bhm, ylim, \"$\\Delta V_{SW}$\" )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fefed088a58>"
+       "<matplotlib.legend.Legend at 0x7f1a7bb5efd0>"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,6 +453,13 @@
     "fig\n",
     "fig.savefig('fig10.png', facecolor='white', bbox_inches='tight')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
