--- a/FIGURE_SCRIPTS/fig_10.ipynb
+++ b/FIGURE_SCRIPTS/fig_10.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,16 +193,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'meanwithiv': -1.169333543480784, 'meanforced': -1.1798129529631858, 'min95withiv': -3.176304224457906, 'max95withiv': 0.9569853598989655, 'min66withiv': -2.1707610055317326, 'max66withiv': -0.1414723765499634, 'min95forced': -2.6161998219703406, 'max95forced': 0.359281443538568, 'min66forced': -1.8974642570525095, 'max66forced': -0.45280791973127554, 'gtymean_withiv': 76.3733651, 'gtymean_forced': 84.4192776}\n",
+      "{'meanwithiv': -1.156318534282625, 'meanforced': -1.1250220122132166, 'min95withiv': -3.3269596455987176, 'max95withiv': 1.0036928049918175, 'min66withiv': -2.212702557798764, 'max66withiv': -0.13114442075293756, 'min95forced': -2.659389967252466, 'max95forced': 0.4395641791044043, 'min66forced': -1.8771653511735564, 'max66forced': -0.3897121297582008, 'gtymean_withiv': 76.10435650000001, 'gtymean_forced': 84.8801175}\n",
+      "{'meanwithiv': -1.0423706380077493, 'meanforced': -1.008148876381296, 'min95withiv': -3.2552708220987525, 'max95withiv': 1.1608451561169428, 'min66withiv': -2.1060080059436377, 'max66withiv': 0.01804625609325685, 'min95forced': -2.6680173291934786, 'max95forced': 0.6528743744943597, 'min66forced': -1.8005636163818122, 'max66forced': -0.21609348399428807, 'gtymean_withiv': 78.97845140000001, 'gtymean_forced': 86.8089586}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cmip56ols)\n",
+    "print(cmip56tls)\n",
+    "print(cmip56bhm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f1a7b6474a8>"
+       "<matplotlib.legend.Legend at 0x7fab4a1e2e80>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -271,14 +292,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "89.12449070000001\n"
+      "89.67049760000002\n"
      ]
     }
    ],
@@ -306,8 +327,8 @@
     "ax2.plot([-0.5,16.5],[max66,max66], color='firebrick', zorder=1, linewidth=3, linestyle='dotted')\n",
     "\n",
     "vdifstring = '{0:6.2f}'.format(np.array(vswdifs.mean())).strip()\n",
-    "ax2.text(1, -10.5,'$\\Delta V_{SW}$=', horizontalalignment='center', verticalalignment='center', fontsize=10, color='black')\n",
-    "ax2.text(1,-11, vdifstring, horizontalalignment='center', verticalalignment='center', fontsize=10, color='black')\n",
+    "ax2.text(1, -10.5,'$\\Delta V_{SW}$=', horizontalalignment='center', verticalalignment='center', fontsize=12, color='black')\n",
+    "ax2.text(1,-11, vdifstring, horizontalalignment='center', verticalalignment='center', fontsize=12, color='black')\n",
     "\n",
     "# CMIP6 model points\n",
     "ax2.plot(np.zeros([cmip5.Model.size])+1, vswdifs,\"o\", markerfacecolor='firebrick', markeredgecolor='black', markersize=10, markeredgewidth=2)\n",
@@ -319,14 +340,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "74.85206193333333\n"
+      "74.85206190000001\n"
      ]
     }
    ],
@@ -355,8 +376,8 @@
     "ax3.plot([-0.5,16.5],[max66,max66], color='royalblue', zorder=1, linewidth=3, linestyle='dotted')\n",
     "\n",
     "vdifstring = '{0:6.2f}'.format(np.array(vswdifs.mean())).strip()\n",
-    "ax3.text(1, -10.5,'$\\Delta V_{SW}$=', horizontalalignment='center', verticalalignment='center', fontsize=10, color='black')\n",
-    "ax3.text(1,-11, vdifstring, horizontalalignment='center', verticalalignment='center', fontsize=10, color='black')\n",
+    "ax3.text(1, -10.5,'$\\Delta V_{SW}$=', horizontalalignment='center', verticalalignment='center', fontsize=12, color='black')\n",
+    "ax3.text(1,-11, vdifstring, horizontalalignment='center', verticalalignment='center', fontsize=12, color='black')\n",
     "\n",
     "# CMIP6 model points\n",
     "ax3.plot(np.zeros([cmip6.Model.size])+1, vswdifs,\"o\", markerfacecolor='royalblue', markeredgecolor='black', markersize=10, markeredgewidth=2)\n",
@@ -368,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -406,8 +427,8 @@
     "ax4.plot([-0.5,16.5],[max66, max66],color='firebrick', zorder=1, linewidth=3, linestyle='dotted')\n",
     "\n",
     "vdifstring = '{0:6.2f}'.format(np.array(vswdifs.mean())).strip()\n",
-    "ax4.text(1, -10.5,'$\\Delta V_{SW}$=', horizontalalignment='center', verticalalignment='center', fontsize=10, color='black')\n",
-    "ax4.text(1,-11, vdifstring, horizontalalignment='center', verticalalignment='center', fontsize=10, color='black')\n",
+    "ax4.text(1, -10.5,'$\\Delta V_{SW}$=', horizontalalignment='center', verticalalignment='center', fontsize=12, color='black')\n",
+    "ax4.text(1,-11, vdifstring, horizontalalignment='center', verticalalignment='center', fontsize=12, color='black')\n",
     "\n",
     "# CMIP5 and 6 model points\n",
     "ax4.plot(np.zeros([cmip5.Model.size])+0.4,cmip5['vfutsw_em']-cmip5['vpastsw_em'],\"o\",markerfacecolor='firebrick',markeredgecolor='black',markersize=10,markeredgewidth=2)\n",
@@ -419,16 +440,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f1a7bb5efd0>"
+       "<matplotlib.legend.Legend at 0x7fab4a23ca90>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
