updatingg error calcs for calp

--- a/ERRORCALC/CALP/errorcalc_calp.ipynb
+++ b/ERRORCALC/CALP/errorcalc_calp.ipynb
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "calp_path=\"../../DATASORT/CALP/DATA/\""
+    "calp_path=\"/project/cas/islas/python_savs/ecpaper2020/DATASORT/CALP/\""
    ]
   },
   {
@@ -59,16 +59,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "CanESM2\n",
       "CESM1-CAM5\n",
       "CSIRO-Mk3-6-0\n",
-      "CanESM2\n",
       "GFDL-CM3\n",
       "MPI-ESM\n"
      ]
     }
    ],
    "source": [
-    "le_models = [x.split(\"_\")[1] for x in sorted(glob.glob(calp_path+\"/calpdata*future.nc\"))] ## parse files to get model names\n",
+    "le_models = ['CanESM2','CESM1-CAM5','CSIRO-Mk3-6-0','GFDL-CM3','MPI-ESM']\n",
     "le_dat_past = []\n",
     "le_dat_future = [] \n",
     "\n",
@@ -129,9 +129,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "CanESM2\n",
       "CESM1-CAM5\n",
       "CSIRO-Mk3-6-0\n",
-      "CanESM2\n",
       "GFDL-CM3\n",
       "MPI-ESM\n"
      ]
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1325,9 +1325,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:ecpaperenv]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-ecpaperenv-py"
   },
   "language_info": {
    "codemirror_mode": {
