updating vwind error calcs

--- a/ERRORCALC/VWIND/errorcalc_vwind_1mem.ipynb
+++ b/ERRORCALC/VWIND/errorcalc_vwind_1mem.ipynb
@@ -38,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vwind_path=\"/project/cas/islas/python/ecpaper2020/DATASORT/VWIND/DATA/\""
+    "vwind_path=\"/project/cas/islas/python_savs/ecpaper2020/DATASORT/VWIND/\""
    ]
   },
   {
@@ -76,66 +76,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<xarray.Dataset>\n",
-      "Dimensions:    (lat: 181, lon: 360, member: 100)\n",
-      "Coordinates:\n",
-      "  * member     (member) int64 0 1 2 3 4 5 6 7 8 9 ... 91 92 93 94 95 96 97 98 99\n",
-      "  * lat        (lat) float64 -90.0 -89.0 -88.0 -87.0 ... 87.0 88.0 89.0 90.0\n",
-      "  * lon        (lon) float64 0.0 1.0 2.0 3.0 4.0 ... 356.0 357.0 358.0 359.0\n",
-      "    Model      <U7 'MPI-ESM'\n",
-      "Data variables:\n",
-      "    vpast_djf  (member, lat, lon) float64 -0.03625 -0.03625 ... 0.006762\n",
-      "    vfut_djf   (member, lat, lon) float64 -0.04518 -0.04518 ... 0.01946 0.01946\n",
-      "    prp_west   (member) float64 4.638 4.773 5.127 4.751 ... 4.782 5.033 4.912\n",
-      "    prf_west   (member) float64 4.75 4.48 4.52 4.811 ... 4.788 4.453 4.715 4.663\n",
-      "    prp_south  (member) float64 2.077 2.084 2.079 1.948 ... 2.045 1.897 2.063\n",
-      "    prf_south  (member) float64 1.745 2.017 1.982 1.946 ... 1.914 1.875 2.003\n",
-      "    prp_mex    (member) float64 1.529 1.391 1.384 1.285 ... 1.508 1.392 1.298\n",
-      "    prf_mex    (member) float64 0.9337 1.102 1.066 0.9528 ... 1.03 0.9757 0.9605\n",
-      "    upast_djf  (member, lat) float64 nan nan 0.5366 0.8361 ... 0.9221 nan nan\n",
-      "    ufut_djf   (member, lat) float64 nan nan 0.5285 0.8291 ... 0.7557 nan nan\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(ds)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "can only concatenate xarray Dataset and DataArray objects, got <class 'str'>",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-2dce5b0d0402>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mle_dat\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mxr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mle_dat\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdim\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"Model\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/project/cas/islas/miniconda3/envs/ecpaperenv/lib/python3.6/site-packages/xarray/core/concat.py\u001b[0m in \u001b[0;36mconcat\u001b[0;34m(objs, dim, data_vars, coords, compat, positions, fill_value, join, combine_attrs)\u001b[0m\n\u001b[1;32m    187\u001b[0m         raise TypeError(\n\u001b[1;32m    188\u001b[0m             \u001b[0;34m\"can only concatenate xarray Dataset and DataArray \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 189\u001b[0;31m             \u001b[0;34m\"objects, got %s\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfirst_obj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    190\u001b[0m         )\n\u001b[1;32m    191\u001b[0m     return f(\n",
-      "\u001b[0;31mTypeError\u001b[0m: can only concatenate xarray Dataset and DataArray objects, got <class 'str'>"
-     ]
-    }
-   ],
-   "source": [
-    "#le_dat = xr.concat(le_dat, dim = \"Model\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Calculate the ensemble mean values for each LE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "le_dat = xr.concat(le_dat, dim = \"Model\")"
    ]
   },
   {
@@ -278,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
